# loan_amortization_api

./: README.md
loan-amortization-api/: pyproject.toml  test.db
loan-amortization-api/loan_amortization_api/: main.py
loan-amortization-api/tests/: conftest.py
loan_amortization_api/: database.py  models.py  utils.py
tests/: test_main.py
