[tool.poetry]
name = "loan-amortization-api"
version = "0.1.0"
description = "A FastAPI application for loan amortization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.9.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
